crates/pcb-zen-core/tests/snapshots/part__part_not_overwritten_by_prop.snap
---
source: crates/pcb-zen-core/tests/part.rs
assertion_line: 4
expression: output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "PART-TYPED")
      (footprint "stdlib_kicad-footprints_Resistor_SMD:R_0603_1608Metric")
      (libsource (lib "lib") (part "PART-TYPED") (description "unknown"))
      (sheetpath (names "R1") (tstamps "993684ed-29bc-53ba-bc0d-39d7d84da9bd"))
      (tstamps "993684ed-29bc-53ba-bc0d-39d7d84da9bd")
      (property (name "Reference") (value "U1"))
      (property (name "manufacturer") (value "MFR-TYPED"))
      (property (name "part") (value "{\"manufacturer\":\"MFR-TYPED\",\"mpn\":\"PART-TYPED\",\"qualifications\":[\"Qualified\"]}"))
      (property (name "tag") (value "ok"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "PART-TYPED")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "P1")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "P2")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
  )
)
